@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -15,18 +16,32 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
 
+        <jetty.version>9.1.3.v20140225</jetty.version>
+        <jetty.host>localhost</jetty.host>
+        <jetty.port>9998</jetty.port>
+
         <junit.version>4.12</junit.version>
+
+        <javaee.version>7.0</javaee.version>
+        <jstl.version>1.2</jstl.version>
+        <taglib.vesion>1.1.2</taglib.vesion>
+        <struts.version>2.3.20</struts.version>
+
+        <mssql.jdbc.version>4.1</mssql.jdbc.version>
+        <yandex.property.version>1.6</yandex.property.version>
     </properties>
 
     <modules>
         <module>ch1-book</module>
         <module>ch2-bookweb</module>
         <module>ch3-practic</module>
+        <module>ch4-struts</module>
     </modules>
 
     <build>
         <pluginManagement>
             <plugins>
+                <!--Compiler-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -35,11 +50,37 @@
                         <target>${maven.compiler.target}</target>
                     </configuration>
                 </plugin>
+                <!--Jetty-->
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>${jetty.version}</version>
+                    <configuration>
+                        <scanIntervalSeconds>0</scanIntervalSeconds>
+                        <webApp>
+                            <contextPath>/</contextPath>
+                        </webApp>
+                        <stopPort>9847</stopPort>
+                        <stopKey>tms-local</stopKey>
+                        <jvmArgs>
+                            -Xmx1024m
+                            -XX:MaxPermSize=512m
+                        </jvmArgs>
+                        <goal>run-forked</goal>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
 
     <dependencies>
+        <!--Java Servlet API-->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${javaee.version}</version>
+        </dependency>
         <!--JUnit-->
         <dependency>
             <groupId>junit</groupId>
